--- a/v3.0的設計/README
+++ b/v3.0的設計/README
@@ -8,8 +8,11 @@
 
 
 ?學生
-	1. 麻痺經驗改為負向情緒點數，有些有起始值，學不會時就會累積。
-
+	0. 學門：有麻痺經驗則暗色
+	1. 學習風格
+	2. 麻痺經驗改為負向情緒點數，有些有起始值，學不會時就會累積。
+	3. 數值一：完整學好所需力道
+	4. 數值二：暗色學門上，一開始具有的負向情緒點數
 
 ?教學卡
 	0. 學門
@@ -22,9 +25,40 @@
 ?基本動作
 	1. 發起教學時，新增「團體教學」選項，一次教所有場上學生
 
+?基本卡片
+	1. 增加一類「勝利目標」，玩家在遊戲初秘密抽兩張，別人看不到。其中之一的勝利條件達成時，翻出來就贏了。
 
 
+完整說明：
 
+0. 遊戲場地區域有：每個人的手牌區、每個人的面前區、抽牌堆、棄牌堆、學生區、高飛區、離開區
 
+1. 首先，場上四張學生卡，面向下
+2. 玩家各秘密抽兩張「勝利目標」，面向下壓住，和四張教育卡牌在手上。
+3. 由教學經驗最淺的玩家先開始遊戲，順時針
+
+===
+
+每回合的流程：
+
+1. 抽一張新的牌，從棄牌頂上抽一張牌，或借一張場上的教學牌(技藝不能借)
+
+2. 出一張教學、技藝或特殊牌
+
+3. 發動一次個別或團體教學，或診斷一名學生(自己偷看)
+	-教學時會：
+		-將學生卡翻成正面
+		-成功條件有三：
+			-風格有一個相合
+			-未碰障礙風格
+			-學門負向情緒不大於教學卡的「數值二」
+	-在成功學習者的身上放白子，代表力道(是誰教的不再重要了)
+		-放在學生卡的中央
+		-如果力道大於等於該生「完整學好所需力道」，則將該生移至「高飛區」
+	-在無效學習者的身上放黑子，代表負向情緒
+		-放在所教的學門上
+		-如果總負向情緒大於等於該生「完整學好所需力道」，則將該生移至「離開區」
+
+4. 投一枚骰子，如果骰到6，就來一名新學生，面向下
 
 
