--- a/v3.0的設計/README
+++ b/v3.0的設計/README
@@ -1,5 +1,7 @@
 ^ 啟蒙導師v3.0
 
+適合人數：2~5人	適合年齡：8+	遊戲時間：15~20min	
+
 
 主要更動：
 
@@ -19,7 +21,7 @@
 	1. 學習風格
 	2. 功能：+失敗也不會造成負向情緒、成功後Y可減少一點負向情緒、T只能教團體、P只能教個別
 	3. 數值一：成功時力道
-	4. 數值二：學生負向情緒最多可到最高，仍可成功
+	4. 數值二：親和基礎
 
 
 ?基本動作
@@ -31,7 +33,7 @@
 
 完整說明：
 
-0. 遊戲場地區域有：每個人的手牌區、每個人的面前區、抽牌堆、棄牌堆、學生區、高飛區、離開區
+0. 遊戲場地區域有：每個人的手牌區、每個人的面前區、抽牌堆、棄牌堆、學生區、自學區、拒學區
 
 1. 首先，場上四張學生卡，面向下
 2. 玩家各秘密抽兩張「勝利目標」，面向下壓住，和四張教育卡牌在手上。
@@ -51,14 +53,27 @@
 		-成功條件有三：
 			-風格有一個相合
 			-未碰障礙風格
-			-學門負向情緒不大於教學卡的「數值二」
-	-在成功學習者的身上放白子，代表力道(是誰教的不再重要了)
+			-學門負向情緒不大於教學卡的「數值二」+ 1d6的親合骰
+
+	-在成功學習者的身上放等量於「數值一」的白子，代表力道(是誰教的不再重要了)
 		-放在學生卡的中央
-		-如果力道大於等於該生「完整學好所需力道」，則將該生移至「高飛區」
-	-在無效學習者的身上放黑子，代表負向情緒
+		-如果力道大於等於該生「完整學好所需力道」，則將該生移至「自學區」
+
+	-在無效學習者的身上放等量於「數值一」的黑子，代表負向情緒
 		-放在所教的學門上
-		-如果總負向情緒大於等於該生「完整學好所需力道」，則將該生移至「離開區」
+		-如果總負向情緒大於等於該生「完整學好所需力道」，則將該生移至「拒學區」
 
-4. 投一枚骰子，如果骰到6，就來一名新學生，面向下
+4. 投一枚骰子，如果骰到偶數，就進來一名新學生，面向下
 
 
+===
+
+「勝利目標」舉例：
+
+	-「自學9人，拒學不超過5人」
+	-「自學7人，拒學不超過3人」
+	-「自學5人，拒學不超過1人」
+	-「學習區0人」
+	-「需要力道8以上的學生，自學4人」
+	-「負向情緒3以上的學生，自學4人」
+	-「有障礙風格或無風格的學生，自學2人」
