--- a/v3.0的設計/README
+++ b/v3.0的設計/README
@@ -28,7 +28,7 @@
 	1. 發起教學時，新增「團體教學」選項，一次教所有場上學生
 
 ?基本卡片
-	1. 增加一類「勝利目標」，玩家在遊戲初秘密抽兩張，別人看不到。其中之一的勝利條件達成時，翻出來就贏了。
+	1. 增加一類「勝利目標」，玩家在遊戲初秘密抽兩張，別人看不到。
 
 
 完整說明：
@@ -38,12 +38,18 @@
 1. 首先，場上四張學生卡，面向下
 2. 玩家各秘密抽兩張「勝利目標」，面向下壓住，和四張教育卡牌在手上。
 3. 由教學經驗最淺的玩家先開始遊戲，順時針
+4. 10名學生離場之後，結束遊戲
+
+===勝利目標===
+
+遊戲結束時，比勝利條件滿足的張數。最多的人獲勝，如果有些人一樣是最多，就共同獲勝。
 
 ===
 
 每回合的流程：
 
-1. 抽一張新的牌，從棄牌頂上抽一張牌，或借一張場上的教學牌(技藝不能借)
+1. 從牌堆或棄牌堆頂抽一張新的牌，或換n張手牌(discard n, draw n)
+	-如果手牌達4張，就不能再抽牌
 
 2. 出一張教學、技藝或特殊牌
 
@@ -63,17 +69,18 @@
 		-放在所教的學門上
 		-如果總負向情緒大於等於該生「完整學好所需力道」，則將該生移至「拒學區」
 
-4. 投一枚骰子，如果骰到偶數，就進來一名新學生，面向下
+4. 投一枚骰子，如果骰到偶數，就進來一名新學生，面向下，第10名學生進場後，略過此步驟
 
 
 ===
 
 「勝利目標」舉例：
 
-	-「自學9人，拒學不超過5人」
-	-「自學7人，拒學不超過3人」
-	-「自學5人，拒學不超過1人」
-	-「學習區0人」
-	-「需要力道8以上的學生，自學4人」
-	-「負向情緒3以上的學生，自學4人」
-	-「有障礙風格或無風格的學生，自學2人」
+	-「需要力道8以上的學生，全部都成功自學」
+	-「負向情緒3以上的學生，全部都成功自學」
+	-「有障礙風格或無風格的學生，全部都成功自學」
+	-「所有學生中，只有不超過1名學生拒學」
+	-「遊戲結束時，場上有至少有2個社群」
+	-「遊戲結束時，擁有2種技藝和2種教學」
+	-「遊戲結束時，擁有4張以手牌」
+	-「遊戲結束時，沒有手牌」
