--- a/TODO
+++ b/TODO
@@ -1,3 +1,17 @@
-- Add pictures
+
+-將讀取的資料複製回同一目錄，改檔案
+
+-改程式，讀新版的檔
+
+-改程式，改版型
+
+-改資料
+
+-刪掉多餘的資料
+
+-測試與平衡
+
+-加圖
+
 - Linebreaking sequence for latin chars
 
