--- a/v3.0的設計/README
+++ b/v3.0的設計/README
@@ -2,6 +2,7 @@
 
 適合人數：2~5人	適合年齡：8+	遊戲時間：15~20min	
 
+(註：以下各數值，待試玩後再修平衡)
 
 主要更動：
 
@@ -15,6 +16,7 @@
 	2. 麻痺經驗改為負向情緒點數，有些有起始值，學不會時就會累積。
 	3. 數值一：完整學好所需力道
 	4. 數值二：暗色學門上，一開始具有的負向情緒點數
+	5. 特殊能力：改為只有一種，且取消回饋
 
 ?教學卡
 	0. 學門
@@ -38,7 +40,11 @@
 1. 首先，場上四張學生卡，面向下
 2. 玩家各秘密抽兩張「勝利目標」，面向下壓住，和四張教育卡牌在手上。
 3. 由教學經驗最淺的玩家先開始遊戲，順時針
-4. 10名學生離場之後，結束遊戲
+4. 遊戲總共進行24回合後，結束遊戲
+	-2人：每人12回合
+	-3人：每人8回合
+	-4人：每人6回合
+	-5人：每人5回合  (總數會多1回合)
 
 ===勝利目標===
 
@@ -80,7 +86,9 @@
 	-「負向情緒3以上的學生，全部都成功自學」
 	-「有障礙風格或無風格的學生，全部都成功自學」
 	-「所有學生中，只有不超過1名學生拒學」
-	-「遊戲結束時，場上有至少有2個社群」
-	-「遊戲結束時，擁有2種技藝和2種教學」
-	-「遊戲結束時，擁有4張以手牌」
-	-「遊戲結束時，沒有手牌」
+	-「10名學生全部離場」
+	-「場上還有至少4名學生」
+	-「場上有至少有2個社群」
+	-「自己擁有2種技藝和2種教學」
+	-「自己擁有4張以手牌」
+	-「自己沒有手牌」
