將學門修為四種
將學門修為四種

--- a/v3.0的設計/README
+++ b/v3.0的設計/README
@@ -7,12 +7,12 @@
 主要更動：
 
 ?學科
-	1. 學科改為四種：理、文、社、藝
+	1. 學科改為四種：理、文、社、藝   ++done
 
 
 ?學生
-	0. 學門：有麻痺經驗則暗色
-	1. 學習風格
+	0. 學門：有麻痺經驗則紫框，完全放棄則在右邊，不能教     ++done
+	1. 學習風格					++done
 	2. 麻痺經驗改為負向情緒點數，有些有起始值，學不會時就會累積。
 	3. 數值一：完整學好所需力道
 	4. 數值二：暗色學門上，一開始具有的負向情緒點數
