新版型完成了
新版型完成了

--- a/v3.0的設計/README
+++ b/v3.0的設計/README
@@ -65,15 +65,18 @@
 		-成功條件有三：
 			-風格有一個相合
 			-未碰障礙風格
-			-學門負向情緒不大於教學卡的「數值二」+ 1d6的親合骰
+			-學門負向情緒不大於教學卡的「數值二」
+				(+ 1d6的親合骰，如果是個別教學。)
 
-	-在成功學習者的身上放等量於「數值一」的白子，代表力道(是誰教的不再重要了)
+		-在成功學習者的身上放等量於「數值一」的白子，代表力道(是誰教的不再重要了)
 		-放在學生卡的中央
 		-如果力道大於等於該生「完整學好所需力道」，則將該生移至「自學區」
 
-	-在無效學習者的身上放等量於「數值一」的黑子，代表負向情緒
+		-在無效學習者的身上放等量於「數值一」的黑子，代表負向情緒
 		-放在所教的學門上
 		-如果總負向情緒大於等於該生「完整學好所需力道」，則將該生移至「拒學區」
+
+		-假如黑子放的比白子多或是一樣多，稱為「惡質教學」，從事「惡質教學」的玩家，必須自己選擇放棄一張「勝利目標」，放回牌堆，不必給別人看。
 
 4. 投一枚骰子，如果骰到偶數，就進來一名新學生，面向下，第10名學生進場後，略過此步驟
 
@@ -85,10 +88,10 @@
 	-「需要力道8以上的學生，全部都成功自學」
 	-「負向情緒3以上的學生，全部都成功自學」
 	-「有障礙風格或無風格的學生，全部都成功自學」
-	-「所有學生中，只有不超過1名學生拒學」
+	-「所有學生中，拒學區無學生」
 	-「10名學生全部離場」
 	-「場上還有至少4名學生」
 	-「場上有至少有2個社群」
 	-「自己擁有2種技藝和2種教學」
 	-「自己擁有4張以手牌」
-	-「自己沒有手牌」
+
