--- a/v3.0的設計/README
+++ b/v3.0的設計/README
@@ -48,7 +48,9 @@
 
 ===勝利目標===
 
-遊戲結束時，比勝利條件滿足的張數。最多的人獲勝，如果有些人一樣是最多，就共同獲勝。
+1. 合作模式：所有人的勝利條件公開。遊戲結束時，所有人都達成自己的兩個目標，就共同獲勝，否則共同失敗。
+
+2. 競爭模式：遊戲結束時，比勝利條件滿足的張數。最多的人獲勝，如果有些人一樣是最多，就共同獲勝。
 
 ===
 
